--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,10 +25,13 @@ jobs:
         uses: hashicorp/setup-terraform@v3
 
       - name: Terraform Init
+        working-directory: Terraform
         run: terraform init -input=false
 
       - name: Terraform Plan
+        working-directory: Terraform
         run: terraform plan -input=false
 
       - name: Terraform Apply
+        working-directory: Terraform
         run: terraform apply -auto-approve -input=false
